<resources>
    <string name="app_name">Asado Manager</string>
    <string name="main_screen_title">Mis Asados</string>
    <string name="attendants_screen_title">Asistentes</string>
    <string name="attendants_screen_footer">* Listadas las personas que han aceptado asistir</string>
    <string name="invite_label">Invitar</string>
    <string name="welcome_toast">Gracias por loguearte!</string>

    <!-- Forms -->
    <string name="title_hint">Titulo</string>
    <string name="date_hint">Fecha</string>
    <string name="time_hint">Hora</string>
    <string name="location_hint">Ubicación</string>
    <string name="note_hint">Nota</string>
    <string name="see_attendants_label">Ver asistentes - Invitar</string>
    <string name="remove_asado">Anular asistencia - Borrar</string>

    <!-- Menu -->
    <string name="log_out">Cerrar Sesión</string>
    <string name="about">Información</string>
</resources>
